--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </style>
   </head>
   <body>
-    <main style="width: 100vw; height: 100vh" id="viz"></main>
+    <main style="width: 1600px; height: 800px" id="viz"></main>
     <main id="lines">
       <div id="toSelect"></div>
-      <main style="width: 90vw; height: 100vh" id="viz1"></main>
+      <main style="width: 1600px; height: 800px" id="viz1"></main>
     </main>
 
     <script src="index.js" type="module"></script>
